<resources>
    <string name="app_name">My Auto</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">The username or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_user_exist">This user already exist</string>
    <string name="password_not_same">Passwords doesn\'t match</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_account">"Don't have an account?"</string>
    <string name="register_now">"Register now"</string>
    <string name="activity_register">"Register"</string>
    <string name="title_activity_main_menu">My Auto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="choose_vehicle">Choose Vehicle</string>
    <string name="session_expired">Session expired. Please log in again.</string>

    <!-- Strings for app sidebar -->
    <string name="timeline">"Timeline"</string>
    <string name="vehicle_information">"Vehicle Information"</string>
    <string name="report">"Report"</string>
    <string name="services_nearby">"Services Nearby"</string>
    <string name="emergency_services">"Emergency Services"</string>
    <string name="marketplace">"Marketplace"</string>
    <string name="news">"News, Tips &amp; Tricks"</string>
    <string name="settings">"Settings"</string>
    <string name="about">"About"</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="no_vehicle_activity">This vehicle has no activity recorded. Please use the + button below to add a new activity.</string>
    <string name="no_vehicle">No vehicle registered. Please add one.</string>
    <string name="empty_garage">Hey! It looks like that your garage is empty. Why don\'t you add one?</string>
    <string name="add_vehicle">Add new vehicle</string>
    <string name="brand">Brand</string>
    <string name="type">Type</string>
    <string name="make_year">Make year</string>
    <string name="category">Category</string>
    <string name="odometer">Odometer</string>
    <string name="stnk_expiry">License expiry</string>
    <string name="license_plate">License plate</string>
    <string name="engine_displacement">Engine displacement</string>
    <string name="gas_type">Gasoline type</string>
    <string name="action_manage_vehicle">Manage vehicles...</string>
    <string name="manage_vehicle">Manage Vehicles</string>
    <string name="vehicle_remove_confirmation">You are removing %1s (%2s) from your account. This action will remove all the vehicle information, including activities.\n\nAre you sure to delete this vehicle?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_add">Add</string>
    <string name="current_odometer">Current odometer</string>
    <string name="km">km</string>
    <string name="connection_error">Oops! The internet is troubling right now, maybe check your data?</string>
</resources>
