<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:title="@string/timeline" />
        <item
            android:id="@+id/nav_vehicle_information"
            android:icon="@drawable/ic_car"
            android:title="@string/vehicle_information" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/report" />
        <item
        android:id="@+id/nav_services_nearby"
        android:icon="@drawable/ic_gas_station"
        android:title="@string/services_nearby" />
        <item
            android:id="@+id/nav_emergency_services"
            android:icon="@drawable/ic_warning_black_24dp"
            android:title="@string/emergency_services" />
        <item
            android:id="@+id/nav_marketplace"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/marketplace" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_newspaper"
            android:title="@string/news" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />
    </group>
</menu>
